# watsonx-code-assistant-individual

./: CMakeLists.txt  Dockerfile  README.md  Untitled-1.md  docker-compose.prod.yml  docker-setup.sh  healthcheck.sh  index.html  install-wsl-tools.sh  install.sh  manifest.json  placeholder.cpp  requirements.txt  scriptsninja-team-config.json  service-worker.js  tmp.Dockerfile  watsonx-ui.html
.history/: .dockerignore_20250308102609  .dockerignore_20250308161008  .pre-commit-config_20250308110829.yaml  Deploy-Ninja-Team_20250308201008.ps1  Deploy-Ninja-Team_20250308201330.ps1  Deploy-Ninjas_20250308181821.ps1  Deploy-Ninjas_20250308192706.ps1  Deploy-Ninjas_20250308193131.ps1  Deploy-Ninjas_20250308194545.ps1  Deploy-Ninjas_20250308201201.ps1  Dockerfile_20250308161008  Dockerfile_20250308215808  Dockerfile_20250308220452  Dockerfile_20250308220552  Makefile_20250308165048  Makefile_20250308174422  Makefile_20250308201008  README_20250308075646.md  README_20250308102747.md  README_20250308161008.md  README_20250308214143.md  deploy-ninjas_20250308174410.sh  deploy-ninjas_20250308174517.cmd  deploy-production_20250308161627.sh  deployment-config_20250308201008.json  docker-compose_20250308102604.yml  docker-compose_20250308220256.yml  docker-compose_20250308220445.yml  docker-deploy_20250308162408.sh  docker-entrypoint_20250308160417.sh  docker-entrypoint_20250308220445.sh  docker-entrypoint_20250308220544.sh  docker-setup_20250308214514.sh  index_20250308102342.html  index_20250308103855.html  install_20250308161008.sh  make_20250308192846.cmd  ninja-hosts_20250308174518.txt  readme-ninja_20250308181821.md  readme-ninja_20250308192708.md  (+3 more)
.history/.cmake/: CodeCoverage_20250308162756.cmake  FindDependencies_20250308165048.cmake
.history/.github/workflows/: build-multiarch_20250308161008.yml  ci-cd_20250308110829.yml
.history/assets/js/: i18n_20250308155909.js  telemetry_20250308104055.js  websocket_20250308103912.js
.history/docs/: DEVELOPER_20250308161008.md
.history/kubernetes/: README_20250308102938.md  deployment_20250308102929.yaml
.history/kubernetes/monitoring/: service-monitor_20250308161630.yaml
.history/kubernetes/production/: deployment_20250308161644.yaml  ingress_20250308161714.yaml
.history/locales/: en_20250308155828.json  es_20250308161008.json
.history/nginx/conf.d/: default_20250308161008.conf
.history/scripts/: deploy-cmake_20250308172420.sh  deployment-controller_20250308162148.sh  deployment-controller_20250308201008.sh  init-build-env_20250308192707.ps1  init-build-env_20250308192914.ps1  init-wsl-build_20250308193252.sh  init-wsl-build_20250308194901.sh  init-wsl-build_20250308201113.sh  ninja-team_20250308192707.py  ninja-team_20250308194901.py  update-dependencies_20250308110829.sh
assets/css/: components.css  main.css  modules.css  themes.css
assets/js/: api.js  auth.js  charts.js  codeReview.js  main.js  promptEngine.js  ui.js  voice.js
kubernetes/autoscaling/: hpa.yaml
nginx/: nginx.conf
scripts/: ai_code_review.py  deploy-ninja-team.sh  ninja-team-config.json  ninja-team.py  ninja-wsl-wrapper.sh
tests/: test_api.py
